--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "airtable": "^0.8.1",
     "emotion-theming": "^10.0.27",
     "favicons": "^6.1.0",
     "next": "^9.4.4",
@@ -34,6 +35,7 @@
     "sitemap": "^6.1.5"
   },
   "devDependencies": {
+    "@types/airtable": "^0.8.0",
     "@types/marked": "^0.7.4",
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
