--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "denoland.id",
-  "description": "Website and library registry for Deno Land Indonesia 🏡",
+  "description": "Website and module registry for Deno Land Indonesia 🏡",
   "version": "1.0.0",
   "repository": "git@github.com:denoland-id/denoland.id.git",
   "author": "Griko Nibras <griko@denoland.id>",
