--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "favicons": "^6.1.0",
     "next": "^9.4.4",
     "next-seo": "^4.5.0",
+    "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
@@ -38,6 +39,7 @@
     "@types/airtable": "^0.8.0",
     "@types/marked": "^0.7.4",
     "@types/node": "^14.0.5",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "all-contributors-cli": "^6.15.0",
