Add env bindings

--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,16 @@
   "alias": ["denoland.id"],
   "env": {
     "AIRTABLE_API_KEY": "@airtable-api-key",
-    "AIRTABLE_BASE_ID": "appxL3Dof2QILyf6Z"
+    "AIRTABLE_BASE_ID": "appxL3Dof2QILyf6Z",
+    "GITHUB_CLIENT_ID": "@gh-denoland-registry-client-id",
+    "GITHUB_CLIENT_SECRET": "@gh-denoland-registry-client-secret"
   },
   "build": {
     "env": {
       "AIRTABLE_API_KEY": "@airtable-api-key",
-      "AIRTABLE_BASE_ID": "appxL3Dof2QILyf6Z"
+      "AIRTABLE_BASE_ID": "appxL3Dof2QILyf6Z",
+      "GITHUB_CLIENT_ID": "@gh-denoland-registry-client-id",
+      "GITHUB_CLIENT_SECRET": "@gh-denoland-registry-client-secret"
     }
   },
   "github": {
