Add api cache-control headers

--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,15 @@
           "value": "public, max-age=31536000, stale-while-revalidate=86400"
         }
       ]
+    },
+    {
+      "source": "/api/x/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=60, stale-while-revalidate=1"
+        }
+      ]
     }
   ],
   "rewrites": [
